# GeoDaedalus

./: Makefile  README.md  STATUS.md  USAGE.md  demo.py  env.example  pyproject.toml  requirements.txt  test_system.py
geodaedalus/: __init__.py
geodaedalus/agents/: __init__.py  base.py  data_extraction.py  data_fusion.py  literature_search.py  requirement_understanding.py
geodaedalus/benchmark/: __init__.py  cli.py  datasets.py  evaluator.py  metrics.py
geodaedalus/cli/: __init__.py  main.py
geodaedalus/core/: __init__.py  config.py  logging.py  metrics.py  models.py  pipeline.py
geodaedalus/services/: __init__.py  document_processor.py  llm.py  search.py
tests/: README.md  __init__.py  conftest.py  run_agent_2.py  test_agents.py  test_core.py  test_services.py
tests/temp/extracted_data/: extracted_data_8_4.json
tests/temp/search_results/: search_results_8.json
